# AozoraDailyTranslations

./: .gitignore  CLASS.md  QA.md  README.md  SEQUENCE.md  SPEC.md  USECASE.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
DATA/: en_map.json  state.json  works.json
DATA/logs/: 2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-13.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  2026-03-19.json  2026-03-20.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-29.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  (+28 more)
assets/: style.css
contact/: index.html
privacy-policy/: index.html
src/aozora/: models.py  run.py
tests/: conftest.py  test_fetcher.py  test_models.py  test_orchestrator.py  test_qa_auditor.py  test_screener.py  test_work_page_generator.py
tools/: test_aozora_encoding.py
works/2026-03-05-rashomon/: index.html
works/2026-03-06-no-4872/: index.html
works/2026-03-07-autumn/: index.html
works/2026-03-08-ryunosuke-akutagawa-s-verse-collection/: index.html
works/2026-03-08-the-god-agni/: index.html
works/2026-03-09-the-god-agni/: index.html
works/2026-03-10-asakusa-park/: index.html
works/2026-03-10-the-devil/: index.html
works/2026-03-11-ababababa/: index.html
works/2026-03-11-afterlife/: index.html
works/2026-03-11-feeling-like-an-elder-brother/: index.html
works/2026-03-12-a-fool-s-life/: index.html
works/2026-03-12-opium/: index.html
works/2026-03-13-a-letter-to-an-old-friend/: index.html
works/2026-03-13-a-tale-of-vendetta/: index.html
works/2026-03-14-a-socialist/: index.html
works/2026-03-14-oishi-kuranosuke-on-a-certain-day/: index.html
works/2026-03-15-a-love-novel/: index.html
works/2026-03-15-dialogue-in-the-dark/: index.html
works/2026-03-16-books-on-my-desk/: index.html
works/2026-03-16-iida-dakotsu/: index.html
works/2026-03-19-last-testament/: index.html
works/2026-03-20-it-depends-on-what-you-mean-by-ism/: index.html
works/2026-03-24-when-i-feel-most-motivated/: index.html
works/2026-03-25-an-evening-tale/: index.html
works/2026-03-26-from-ito/: index.html
works/2026-03-27-notes-on-itojo/: index.html
works/2026-03-29-about-mr-inukai/: index.html
works/2026-03-31-the-dog-and-the-flute/: index.html
works/2026-04-01-yam-gruel/: index.html
works/2026-04-02-mr-iwano-h-mei/: index.html
works/2026-04-03-fish-market/: index.html
works/2026-04-04-mr-uchida-hyakken/: index.html
(+82 files in other folders)
